Fix comment on firefox + redirect when acces via url to forbidden page + fix limit characteres into modif page

--- a/index.css
+++ b/index.css
@@ -157,6 +157,7 @@
                     }
                 .delete_comment {
                     cursor: pointer;
+                    margin-right: 16px;
                 }
                     .delete_comment img {
                         width: 10px;
