--- a/profil.css
+++ b/profil.css
@@ -380,6 +380,7 @@
                             }
                         .delete_comment {
                             cursor: pointer;
+                            margin-right: 16px;
                         }
                             .delete_comment img {
                                 width: 7px;
